# tracker

./: .clang-format  .clang-tidy  .gitignore  AUTHORS  COPYING  Makefile  README  TODO  meson.build
include/: executable.h  executables.h  trace.h  traces.h
src/: Makefile  config.h.in  executable.c  executables.c  meson.build  sample.c  trace.c  traces.c  tracker.c  tracker.h
subprojects/: cmocka.wrap
test/: Makefile  call.c  if.c  printf.c  switch.c  while.c
test/samples/: Makefile
tests/: Makefile  meson.build  test_traces.c
tests/samples/: Makefile  meson.build  sample-01.c  sample-02.cc
