executable('sample-01', 'sample-01.c')
executable('sample-01-static', 'sample-01.c')

executable('sample-01-32', 'sample-01.c')

executable('sample-02', 'sample-02.cc',
	   override_options : ['cpp_std=c++11', 'warning_level=2'])
executable('sample-02-static', 'sample-02.cc',
	   override_options : ['cpp_std=c++11', 'warning_level=2'])
